--- a/historia.html
+++ b/historia.html
@@ -25,7 +25,7 @@
               <div class="offcanvas-body amarilla">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="principal.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="historia.html">Nuestra historia</a>
@@ -107,4 +107,5 @@
       </div>
     </footer>
 </body>
+
 </html>
